compiler/acton/test/syntaxerrors/err34.act
# Protocol with invalid syntax
protocol MyProto:
    def method()